# luled

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.py
app/: CMakeLists.txt
app/inc/: plane.h
app/src/: main.cpp
lib/: CMakeLists.txt
lib/color/: CMakeLists.txt
lib/color/inc/: color.h  color_constants.h  color_matrix.h  color_transfer.h  color_transform.h  color_vec.h
lib/color/src/: color.cpp  color_transform.cpp
lib/color/tests/: CMakeLists.txt  transfer_test.cpp
lib/display/: CMakeLists.txt
lib/display/inc/: display.h  framebuffer.h  input.h  line.h  shape.h  square.h  wave.h
lib/display/src/: display.cpp  framebuffer.cpp  input.cpp  line.cpp  square.cpp  wave.cpp
lib/glad/: .gitignore  CMakeLists.txt
lib/image/: CMakeLists.txt
lib/image/inc/: image.h  ppm.h
lib/image/src/: ppm.cpp
lib/ledarray/: CMakeLists.txt
lib/ledarray/inc/: led_effect.h  ledarray.h
lib/ledarray/src/: led_effect.cpp  ledarray.cpp
lib/syclib/: .gitignore  CMakeLists.txt
lib/syclib/inc/: sycc.h
lib/syclib/src/: sycc.cpp
lib/syclib/sycl/: syclivat.cpp  syclivat.h
lib/video/: CMakeLists.txt
lib/video/inc/: lelu_decode.h  lelu_loader.h
lib/video/src/: lelu_decode.cpp  lelu_loader.cpp
